# EverythingLike

./: ABOUT.md  Cargo.toml  README.md
languages/: en.lang  zh.lang
src/: config.rs  everything_sdk.rs  file_icons.rs  lang.rs  main.rs  thumbnail.rs
